remove guava dependency (#3)